# llama.cpp

./: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  LlamaConfig.cmake  LlamaConfigVersion.cmake  Makefile  cmake_install.cmake  llama.h
common/: Makefile  cmake_install.cmake
examples/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/baby-llama/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/batched/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/batched-bench/: CTestTestfile.cmake  Makefile  batched-bench.cpp  cmake_install.cmake
examples/beam-search/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/benchmark/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/chat_llama/: CLIView.cpp  CLIView.h  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  chat_llama.cpp  cmake_install.cmake  controllers.cpp  controllers.h  inference.cpp  inference.h
examples/convert-llama2c-to-ggml/: CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/cvector-generator/: CTestTestfile.cmake  (+2 more)
examples/refactored_main/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  refactored_main.cpp
examples/soft-prompt-training/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  soft_prompt_training.cpp
ggml/: Makefile  cmake_install.cmake
pocs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: Makefile  cmake_install.cmake
tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+130 files in other folders)
